# aMNIT

./: CMakeLists.txt  README.md
llvm/tools/clang/tools/clang-model-generator/: CMakeLists.txt
llvm/tools/clang/tools/clang-model-generator/src/: API.h  CMakeLists.txt
llvm/tools/clang/tools/clang-model-generator/src/CMG/: CMakeLists.txt
llvm/tools/clang/tools/clang-model-generator/src/CMG/frontends/: CMakeLists.txt  FrontendBase.h
llvm/tools/clang/tools/clang-model-generator/src/CMG/frontends/cpp/: CMakeLists.txt  ClangASTConsumer.h  ClangASTVisitor.cpp  ClangASTVisitor.h  ClangCheck.cpp_old  ClangFrontendAction.h  ClangFrontendActionFactory.h  ClangUtils.h  CommandLineArgumentsAdjuster.cpp  CommandLineArgumentsAdjuster.h  Frontend.cpp  Frontend.h
llvm/tools/clang/tools/clang-model-generator/src/CMG/frontends/cpp_svg/: CMakeLists.txt  ClangASTConsumer.h  ClangASTVisitor.cpp  ClangASTVisitor.h  ClangFrontendAction.h  ClangFrontendActionFactory.h  ClangUtils.h  CommandLineArgumentsAdjuster.cpp  CommandLineArgumentsAdjuster.h  Frontend.cpp  Frontend.h
llvm/tools/clang/tools/clang-model-generator/src/CMG/model/: AccessSpecifier.h  CMakeLists.txt  Class.cpp  Class.h  Function.cpp  Function.h  Method.cpp  Method.h  Model.cpp  Model.h  Model_C.cpp  Model_C.h  Namespace.cpp  Namespace.h  Parameter.cpp  Parameter.h  Type.cpp  Type.h
llvm/tools/clang/tools/clang-model-generator/src/CMG/model_svg/: AccessSpecifier.h  CMakeLists.txt  Class.cpp  Class.h  Function.cpp  Function.h  Method.cpp  Method.h  Model.cpp  ModelItem.cpp  ModelItem.h  ModelVisitor.h  Namespace.cpp  Namespace.h  Parameter.cpp  Parameter.h  Type.cpp  Type.h
mni/: CMakeLists.txt
mni/src/: CMakeLists.txt  main.cpp
mni/src/context/: CMakeLists.txt  ModelContext.cpp  ModelContext.h
mni/src/model/: CMakeLists.txt  model.cpp  model.h
mni/src/templateEngine/: CMakeLists.txt  scriptEngine.cpp  scriptEngine.h  templateEngine.cpp  templateEngine.h
mni/src/tools/: CMakeLists.txt  stringUtils.cpp  stringUtils.h
mni/templates/Matlab/cpp/: main.cpp.mustache
